--- a/index.html
+++ b/index.html
@@ -35,5 +35,19 @@
     </ul>
   </div>
 </nav>
+<br  />
+<div class="container">
+  <div class="row">
+    <div class="col">
+    </div>
+    <div class="col-6">
+      <h1>Wellcome Sign in</h1>
+      <br />
+      <p>Email Address</p>
+    </div>
+    <div class="col">
+    </div>
+  </div>
+ </div>
 </body>
 </html>
