--- a/index.html
+++ b/index.html
@@ -43,7 +43,17 @@
     <div class="col-6">
       <h1>Wellcome Sign in</h1>
       <br />
-      <p>Email Address</p>
+      <form>
+      <div class="form-group">
+        <label for="formGroupExampleInput">Email Address</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Email Address">
+      </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput2">Password</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Password">
+      </div>
+	  </form>
+<p>Email Address</p>
     </div>
     <div class="col">
     </div>
