--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="row">
     <div class="col">
     </div>
-    <div class="col-6">
+    <div class="col-5">
       <h1>Wellcome Sign in</h1>
       <br />
       <form>
@@ -53,7 +53,8 @@
         <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Password">
       </div>
 	  </form>
-<p>Email Address</p>
+      <button type="button" class="btn btn-lg btn-dark" style="background-color:#179dff; width:100%;">Sign In</button>
+	<p>Don't have an account? Sign-up, it's free.</p>
     </div>
     <div class="col">
     </div>
