--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
     <div class="col">
     </div>
   </div>
- </div>
+  
+  <nav class="navbar fixed-bottom navbar-primary" style="background-color:#cecece;">
+  <a class="nav-link" href="#">2016. Node-Express-MVC-App</a>
+ </nav>
+</div>
 </body>
 </html>
